some rework a logginning

--- a/Messenger/authorization_app/templates/authorization_app/authorization.html
+++ b/Messenger/authorization_app/templates/authorization_app/authorization.html
@@ -4,6 +4,6 @@
     {% csrf_token %}
     {{ auth_form.as_div }}
     
-    <button type="submit"></button>
+    <button type="submit">Submit</button>
  </form>
-(% endblock %)
+{% endblock %}
