--- a/Messenger/home_app/static/home_app/css/home.css
+++ b/Messenger/home_app/static/home_app/css/home.css
@@ -1,15 +1,19 @@
-main{
-    background-color: #FAF8FF;
+
+.content{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    max-width: 1440px;
+    width: 100%;
+    gap: 8px;
 }
 .fixed-left-panel{
-    position: sticky;
     display: flex;
     flex-direction: column;
     gap: 8px;
     width: 350.87px;
     height: fit-content;
-    top: 104px;
-    left: 80.47px;
+    margin-top: 16px;
 }
 .user-profile{
     display: flex;
@@ -54,7 +58,7 @@ main{
     text-align: center;
 }
 .user-profile-called-as{
-    font-weight: 400;
+    font-weight: 500;
     line-height: 100%;
     font-size: 16px;
     letter-spacing: -1%;
@@ -83,9 +87,254 @@ main{
 }
 .user-profile-social-stat-name{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 100%;
     letter-spacing: -1%;
     text-align: center;
+    color: #81818D;
+}
+.user-requests{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    width: 350.87px;
+    height: fit-content;
+    background-color: #FFFFFF;
+    border: 1px solid #CDCED2;
+    border-radius: 10px;
+    gap: 24px;
+}
+.user-requests-titles{
+    display: flex;
+    flex-direction: row;
+    width: 318.87px;
+    height: fit-content;
+    justify-content: space-between;
+    align-items: center;
+}
+.user-requests-link{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+    width: fit-content;
+    height: 23px;
+    gap: 8px;
+}
+.user-requests-link img{
+    width: 20px;
+    height: 20px;
+}
+.user-requests-link-requests{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    font-size: 20px;
+    color: #81818D;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    height: 23px;
+}
+.user-requests-links-show-all{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+    text-align: center;
+    color: #543C52;
+}
+.user-requests-peoples{
+    display: flex;
+    flex-direction: column;
+    width: 318.87px;
+    height: fit-content;
+    gap: 16px;
+}
+.user-requests-people{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    width: 318.87px;
+    height: fit-content;
+}
+.user-requests-people img{
+    width: 46px;
+    height: 46px;
+}
+.user-requests-people-name{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0%;
+    width: 260.87px;
+    height: 18px;
+    color: #070A1C;
+}
+.user-requests-people-followers{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0%;
+    width: fit-content;
+    height: fit-content;
+    color: #81818D;
+}
+.user-messages{
+    display: flex;
+    flex-direction: column;
+    width: 350.87px;
+    height: fit-content;
+    padding: 16px 0px;
+    gap: 24px;
+    border: 1px solid #CDCED2;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+}
+.user-messages-titles{
+    display: flex;
+    flex-direction: row;
+    padding: 0px 16px;
+    justify-content: space-between;
+    align-items: center;
+}
+.user-messages-title-messages{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    width: fit-content;
+    height: fit-content;
+
+}
+.user-messages-title-messages img{
+    width: 20px;
+    height: 20px;
+}
+.user-messages-title-messages p{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #81818D;
+    height: 20px;
+    width: fit-content;
+}
+.user-messages-title-see-all p{
+    font-size: 16px;
+    color: #543C52;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    height: fit-content;
+    width: fit-content;
+}
+.user-messages-peoples{
+    display: flex;
+    flex-direction: column;
+    width: 350.87px;
+    height: fit-content;
+}
+.user-messages-people{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 16px;
+}
+.user-messages-people-inner{
+    display: flex;
+    flex-direction: row;
+    width: 318.87px;
+    height: fit-content;
+    gap: 12px;
+
+}
+.user-messages-people-inner img{
+    width: 46px;
+    height: 46px;
+}
+.user-messages-people-inner-content{
+    gap: 4px;
+    display: flex;
+    flex-direction: column;
+    height: 44px;
+    width: 260.87px;
+}
+.user-messages-people-inner-content-name-time{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 260.87px;
+    height: fit-content;
+}
+.user-messages-people-inner-content-name{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: #070A1C;   
+}
+.user-messages-people-inner-content-time{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 0%;
+    color: #81818D;
+}
+.user-messages-people-inner-content-message p{
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+    color: #070A1C;
+}
+.message-checked{
+    background-color: #E9E5EE;
+}
+.unfixed-right-panel{
+    display: flex;
+    width: 923px;
+    height: fit-content;
+    margin-top: 16px;
+    gap: 8px;
+}
+.fast-message{
+    display: flex;
+    padding: 16px;
+    width: 923px;
+    min-height: 120px;
+    border: 1px solid #CDCED2;
+    border-radius: 10px;
+    gap: 10px;
+    background-color: #FFFFFF;
+}
+.fast-message-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 891px;
+    height: max-content;
+}
+.fast-message-content-input{
+    border: none;
+    outline: none;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.7%;
+    
+}
+.fast-message-content-input::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.7%;
     color: #81818D;
 }
