--- a/Messenger/home_app/templates/home_app/home.html
+++ b/Messenger/home_app/templates/home_app/home.html
@@ -133,11 +133,27 @@
                 <div class="fast-message-content-buttons">
                     <button class="fast-message-content-button" type="button"><img src="{% static 'home_app/img/picture.png' %}"></button>
                     <button class="fast-message-content-button" type="button"><img src="{% static 'home_app/img/emodji.png' %}"></button>
-                    <button class="fast-message-content-button" type="button">
+                    <button class="fast-message-content-button-publish" type="button">
                         <p>Публікація</p>
                         <img src="{% static 'home_app/img/PlaneR.png' %}">
                     </button>
                 </div>
+            </div>
+        </div>
+        <div class="social-post">
+            <div class="social-post-user-info">
+                <div class="social-post-inner-user-info" >
+                    <div class="social-post-inner-user-info-total">
+                        <img src="{% static 'home_app/img/Avatar7.png' %}">
+                        <p>X_AE_A-13</p>
+                    </div>
+                    <div class="social-post-inner-user-info-sign" >
+                        <img src="{% static 'home_app/img/sign.png' %}">
+                    </div>
+                </div>
+                <button class="social-post-dots">
+                    <img src="{% static 'home_app/img/Dots.png' %}">
+                </button>
             </div>
         </div>
     </div>
