--- a/Messenger/home_app/templates/home_app/home.html
+++ b/Messenger/home_app/templates/home_app/home.html
@@ -155,6 +155,103 @@
                     <img src="{% static 'home_app/img/Dots.png' %}">
                 </button>
             </div>
+            <div class="social-post-info">
+                <div class="social-post-info-text" >
+                    <span>Інколи найкращі ідеї народжуються в тиші 🌿<br>
+                        Природа, книга і спокій — усе, що потрібно, аби перезавантажитись.
+                        <p class="social-post-info-text-tags" >
+                            #відпочинок #натхнення #життя #природа #читання #спокій #гармонія
+                        </p>
+                    </span>
+                </div>
+                <div class="social-post-info-photos">
+                    <div class="social-post-info-photos-group-1" >
+                        <img src="{% static 'home_app/img/photo-1.png' %}">
+                        <img src="{% static 'home_app/img/photo-2.png' %}">
+                    </div>
+                    <div class="social-post-info-photos-group-2">
+                        <img src="{% static 'home_app/img/photo-3.png' %}">
+                        <img src="{% static 'home_app/img/photo-4.png' %}">
+                        <img src="{% static 'home_app/img/photo-5.png' %}">
+                    </div>
+                </div>
+                <div class="social-post-info-stats">
+                    <div class="social-post-info-stat-likes">
+                        <img src="{% static 'home_app/img/like.png' %}">
+                        <p>120 Вподобань</p>
+                    </div>
+                    <div class="social-post-info-stat-views">
+                        <img src="{% static 'home_app/img/eye.png' %}">
+                        <p>890 Переглядів</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="social-post">
+            <div class="social-post-user-info">
+                <div class="social-post-inner-user-info" >
+                    <div class="social-post-inner-user-info-total">
+                        <img src="{% static 'home_app/img/Avatar8.png' %}">
+                        <p>Alex_03</p>
+                    </div>
+                </div>
+                <button class="social-post-dots">
+                    <img src="{% static 'home_app/img/Dots.png' %}">
+                </button>
+            </div>
+            <div class="social-post-info">
+                <div class="social-post-info-text" >
+                    <span>буває такий настрій: просто лежиш і існуєш 😅<br>чай в одній руці, телефон в іншій, думки десь у космосі 🌌 і знаєте шо? норм
+                        <p class="social-post-info-text-tags" >
+                            #вайб
+                        </p>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="social-post">
+            <div class="social-post-user-info">
+                <div class="social-post-inner-user-info" >
+                    <div class="social-post-inner-user-info-total">
+                        <img src="{% static 'home_app/img/Avatar8.png' %}">
+                        <p>Alex_03</p>
+                    </div>
+                </div>
+                <button class="social-post-dots">
+                    <img src="{% static 'home_app/img/Dots.png' %}">
+                </button>
+            </div>
+            <div class="social-post-info">
+                <div class="social-post-info-text" >
+                    <span>буває такий настрій: просто лежиш і існуєш 😅<br>чай в одній руці, телефон в іншій, думки десь у космосі 🌌 і знаєте шо? норм
+                        <p class="social-post-info-text-tags" >
+                            #вайб
+                        </p>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="social-post">
+            <div class="social-post-user-info">
+                <div class="social-post-inner-user-info" >
+                    <div class="social-post-inner-user-info-total">
+                        <img src="{% static 'home_app/img/Avatar8.png' %}">
+                        <p>Alex_03</p>
+                    </div>
+                </div>
+                <button class="social-post-dots">
+                    <img src="{% static 'home_app/img/Dots.png' %}">
+                </button>
+            </div>
+            <div class="social-post-info">
+                <div class="social-post-info-text" >
+                    <span>буває такий настрій: просто лежиш і існуєш 😅<br>чай в одній руці, телефон в іншій, думки десь у космосі 🌌 і знаєте шо? норм
+                        <p class="social-post-info-text-tags" >
+                            #вайб
+                        </p>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
