--- a/Messenger/home_app/static/home_app/css/home.css
+++ b/Messenger/home_app/static/home_app/css/home.css
@@ -3,8 +3,9 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    max-width: 1440px;
+    max-width: 1280px;
     width: 100%;
+    height: 100vh;
     gap: 8px;
 }
 .fixed-left-panel{
