--- a/Messenger/static/css/base.css
+++ b/Messenger/static/css/base.css
@@ -31,11 +31,13 @@ body{
     align-items: center;
     justify-content: start;
     overflow-x: hidden;
+    height: 100%;
+    background-color: #FAF8FF;
 }
 header{
     display: flex;
     flex-direction: row;
-    max-width: 1440px;
+    max-width: 1280px;
     width: 100%;
     height: 88px;
     justify-content: space-between;
@@ -49,7 +51,16 @@ main{
     align-items: center;
     background-color: #FAF8FF;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+}
+.header-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 88px;
+    background-color: #ffffff;
+
 }
 .logo{
     width: 145px;
