--- a/Messenger/registration_app/templates/registration_app/registration.html
+++ b/Messenger/registration_app/templates/registration_app/registration.html
@@ -3,7 +3,7 @@
 {% block main %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ reg_form.as_div }}
+    {{ form.as_div }}
     <button type="submit">Submit</button>
 </form>
 
