start of rework registration, start of using websocket

--- a/Messenger/authorization_app/templates/authorization_app/authorization.html
+++ b/Messenger/authorization_app/templates/authorization_app/authorization.html
@@ -2,7 +2,7 @@
 {% block main %}
  <form method="post">
     {% csrf_token %}
-    {{ auth_form.as_div }}
+    {{ form.as_div }}
     
     <button type="submit">Submit</button>
  </form>
