--- a/Messenger/static/css/base.css
+++ b/Messenger/static/css/base.css
@@ -40,11 +40,15 @@ header{
     max-width: 1280px;
     width: 100%;
     height: 88px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color: #ffffff;
 }
+.space-between{
+    justify-content: space-between;
+}
 main{
+    margin-top: 88px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -54,12 +58,14 @@ main{
     height: 100%;
 }
 .header-div{
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 88px;
     background-color: #ffffff;
+    z-index: 100;
 
 }
 .logo{
@@ -89,6 +95,12 @@ main{
     gap: 8px;
     width: fit-content;
     height: fit-content;
+    padding:4px 8px;
+    transition: 550ms cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+.link:hover{
+    background-color: #E9E5EE;
+    border-radius: 3px;
 }
 .link p{
     color: #070A1C;
@@ -112,6 +124,7 @@ main{
     height: 40px;
     border: 1px solid #543C52;
     border-radius: 1234px;
+    transition: 550ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 .link-log-out img{
     width: 20px;
@@ -123,4 +136,8 @@ main{
     line-height: 20px;
     font-weight: 500;
     letter-spacing: -0.6%;
+}
+.link-log-out:hover{
+    cursor: pointer;
+    background-color: #E9E5EE;
 }
